--- a/style.css
+++ b/style.css
@@ -238,3 +238,120 @@
   transform: none;
   opacity: 1;
 }
+
+
+/* UGC STYLES */
+.header_img{
+  width:100vw;
+  height: 100vh;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: -2;
+}
+.ugc_portfolio{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+  opacity: 0;
+  animation: fadeIn 2s forwards;
+  margin:0;
+  padding: 0;
+
+}@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.ugc_title{
+  color: white;
+  font-size: larger;
+
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 72vh;
+  text-align: center;
+  padding-top: 230px;
+
+}
+
+.social_icon{
+  width:32px;
+  height:32px;
+  margin: 10px;
+  text-decoration: none;
+
+}
+
+a{
+  text-decoration: none;
+}
+
+.ugc_about{
+  padding: 100px;
+  height: 100vh;
+}
+
+.ugc_about_blurb{
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+        
+  
+  /* height:100vh; */
+  /* overflow:auto;
+    */
+    float:left;
+  width:60%;
+  /* background-color: red; */
+}
+
+.test{
+  width: 500px;
+  /* background-color: blue; */
+}
+
+
+.ugc_stat_cards{
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+        
+  width:10%;
+
+  /* height:100vh; */
+  overflow:auto;
+  float:left;
+
+}
+.ugc_stat{
+  display: flex;
+  align-items: center;
+}
+
+.ugc_stat_text{
+  padding-left: 10px;
+  width: 120px
+}
+
+.ugc_stat_circle {
+  /* 1. Define a square shape */
+  width: 30px;
+  height: 30px;
+  
+  /* 2. Create the circle */
+  border-radius: 50%;
+  background-color: #847366; /* Example background color */
+  
+  /* 3. Center the text using Flexbox */
+  display: flex;
+  align-items: center;      /* Centers vertically */
+  justify-content: center;    /* Centers horizontally */
+  
+  /* Optional: Text styling */
+  color: #e1e1e1;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  text-align: center;
+  padding: 10px; /* Add some padding to prevent text from touching the edges */
+}
+
+
