--- a/widescreen.css
+++ b/widescreen.css
@@ -1,69 +1,51 @@
    
-   .silkscreen-regular {
+.silkscreen-regular {
   font-family: "Silkscreen", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-.silkscreen-bold {
+
+body {
   font-family: "Silkscreen", sans-serif;
-  font-weight: 700;
-  font-style: normal;
+  background-color: black;
+} 
+
+.index_container{
+  display: flex;
+  flex-direction: row;
+  justify-content: left; /* Centers horizontally */
+  align-items: center; /* Centers vertically */
+  height: 100vh; /* Full viewport height */
 }
 
+.mascot_image{
+  width: auto;
+  height: 100vh;
+}
 
-   body {
+.logo_image{
+  width: 30%;
+  height:fit-content;
+  padding-left: 7%;   
+  
+  /* ANIMATION ON LOAD */
+  opacity: 0;
+  animation: fadeIn 2s forwards;   
+} @keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
 
-    
-      font-family: "Silkscreen", sans-serif;
+/* @media only screen and (min-width: 768px) {
 
-        /* font-family: sans-serif; */
-      background-color: black;
-    } 
+} */
 
+    /* not reviewed / cleaned */
 
 
-    .mascot{
 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        width:50%;
-        height:100vh;
-        overflow:auto;
-        float:left;
-    }
-
-    .mascot_image{
-        float:left;
-        height: 100%;
-    }
-
-    .logo{
-
-        display: flex;
-        justify-content: left;
-        align-items: center;
-
-        width:50%;
-        height:100vh;
-        overflow:auto;
-        float:right;
-    }
-
-    .logo_image{
-        /* float:right; */
-      opacity: 0;
-      animation: fadeIn 2s forwards;
-
-      padding-left: 100px;
-      width: 40%;
-    }  @keyframes fadeIn {
-            to {
-                opacity: 1;
-            }
-        }
     
     .about_blurb{
       opacity: 0;
@@ -270,7 +252,6 @@
   height: 72vh;
   text-align: center;
   padding-top: 230px;
-
 }
 
 .social_icon{
