--- a/widescreen.css
+++ b/widescreen.css
@@ -5,7 +5,6 @@
   font-style: normal;
 }
 
-
 body {
   font-family: "Silkscreen", sans-serif;
   background-color: black;
@@ -22,13 +21,14 @@ body {
 .mascot_image{
   width: auto;
   height: 100vh;
+
+  padding-top: 100px;
 }
 
 .logo_image{
   width: 30%;
-  height:fit-content;
-  padding-left: 7%;   
-  
+  height: auto;
+    
   /* ANIMATION ON LOAD */
   opacity: 0;
   animation: fadeIn 2s forwards;   
